src-tauri/compile_err.txt
    Blocking waiting for file lock on build directory
    Checking app v0.1.0 (D:\AI\通信项目设计管家\src-tauri)
warning: unused import: `warn`
 --> src\utils\office_converter.rs:4:21
  |
4 | use tracing::{info, warn, error};
  |                     ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> src\agent\tool_runtime.rs:880:42
    |
880 |                 .call_tool(server, tool, args)
    |                  ---------               ^^^^ expected `&Value`, found `Value`
    |                  |
    |                  arguments to this method are incorrect
    |
note: method defined here
   --> src\mcp\client.rs:123:18
    |
123 |     pub async fn call_tool(
    |                  ^^^^^^^^^
...
127 |         arguments: &Value,
    |         -----------------
help: consider borrowing here
    |
880 |                 .call_tool(server, tool, &args)
    |                                          +

warning: unused import: `Manager`
 --> src\mcp\commands.rs:3:13
  |
3 | use tauri::{Manager, State};
  |             ^^^^^^^

For more information about this error, try `rustc --explain E0308`.
warning: `app` (lib) generated 2 warnings
error: could not compile `app` (lib) due to 1 previous error; 2 warnings emitted
